# openticket-microservices

./: .gitignore  README.md  compose-kafka.yml  docker-compose-nodb.yml  docker-compose.yml
api-gateway/: Dockerfile  makefile  pyproject.toml
api-gateway/api_gateway/: main.py
api-gateway/api_gateway/dtos/: catalog_event_dto.py  inventory_event_dto.py
api-gateway/api_gateway/routers/: __init__.py  catalog.py  inventory.py
api-gateway/api_gateway/services/: catalog.py  inventory.py
api-gateway/tests/: __init__.py  test_main.py
api-gateway/tests/mocks/services/: catalog.py
api-gateway/tests/routers/: test_catalog.py
catalog/: Dockerfile  init.sql  pom.xml
docker/: compose-api-gateway.yml  compose-catalog.yml  compose-inventory.yml  compose-kafka-control-center.yml  compose-kafka.yml  compose-users.yml
docs/httpClient/: api-gateway.http  inventory.http  users.http
docs/load-testing/: package-lock.json  package.json
docs/load-testing/inventory/: createEvent.js
envs/: .env.catalog.example  .env.inventory.example
httpClient/: api-gateway.http  catalog.http  inventory.http
inventory/: .eslintignore  .eslintrc.json  .sequelizerc  Dockerfile  package-lock.json  package.json
inventory/src/: app.js  server.js
inventory/src/controllers/: inventory.controller.js
inventory/src/routers/: inventory.router.js
inventory/src/utils/: domainResponses.js  (+1 more)
orders/: .gitignore  .sequelizerc  package-lock.json  package.json  tsconfig.json
orders/src/: .eslintrc.json  app.ts  server.ts
users/: go.mod  makefile
users/cmd/: main.go
users/src/: main.go
(+47 files in other folders)
